resolved title overflow

--- a/recipes/Tandoori_Chicken.css
+++ b/recipes/Tandoori_Chicken.css
@@ -349,7 +349,7 @@ body {
 
     .hero__title{
         font-size: 4.5rem;
-        top:23rem;
+        top:21.5rem;
         left: 1.5rem;
     }
 
@@ -423,10 +423,6 @@ body {
 
     .hero {
         overflow: hidden;
-    }
-
-    .hero__title{
-        top:23rem;
     }
 
     .hero__image {
