--- a/recipes/pages.css
+++ b/recipes/pages.css
@@ -422,7 +422,7 @@ body {
 @media (min-width: 1536px) {
 
     .hero__title{
-        top:23rem;
+        top:21.5rem;
     }
 
     .hero__image {
